--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,11 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
+cache:
+  directories:
+  - node_modules
 before_script:
-  - npm start
+  - node ./bin/www &
 services:
   - mongodb
+
